# EigenCore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md
docs/architecture/: competitive-landscape.md  ml-foundations.md  system-overview.md
docs/research/: adaptive-training.md  emergent-gaps.md  gemini-session-insights.md  matrix-math-foundations.md  sparse-activation-and-routing.md
docs/roadmap/: custom-model-plan.md  phased-plan.md
src/eigencore/: __init__.py  forge.py
src/eigencore/agent/: __init__.py  executor.py  grammar.py  react.py  tool.py
src/eigencore/analysis/: __init__.py  sparsity.py
src/eigencore/cli/: main.py
src/eigencore/context/: __init__.py  manager.py
src/eigencore/engine/: __init__.py  inference.py  layer_skip.py  sparse_inference.py  speculative.py
src/eigencore/hal/: __init__.py  _cpuid_win.py  profiler.py
src/eigencore/models/: __init__.py  registry.py
src/eigencore/router/: __init__.py  classifier.py
src/eigencore/training/: __init__.py  convergence.py  trainer.py
tests/: test_context.py  test_convergence.py  test_engine_integration.py  test_executor.py  test_grammar.py  test_layer_skip.py  test_profiler.py  test_react.py  test_router.py  test_sparse_inference.py  test_speculative.py  test_tool.py
