[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigencore"
version = "0.1.0"
description = "CPU-first LLM intelligence runtime — hardware-aware inference, training, and agent orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Khubaib Nazeer", email = "khubaibnazeer8@gmail.com" },
]
keywords = ["llm", "cpu", "inference", "framework", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "huggingface-hub>=0.20.0",
    "llama-cpp-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
train = [
    "torch>=2.0.0",
    "peft>=0.10.0",
    "transformers>=4.40.0",
    "bitsandbytes>=0.43.0",
]

[project.scripts]
eigencore = "eigencore.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/eigencore"]

[tool.ruff]
target-version = "py310"
line-length = 100
